# Console-Adventure

./: .gitignore  CMakeLists.txt  LICENSE  README.md
game/: BattleMode.cpp  Helper.cpp  ItemManager.cpp  Map.cpp  Player.cpp  Textures.cpp
headers/: SpaceDOS.h  game.h
headers/game/: BattleMode.h  Helper.h  ItemManager.h  Map.h  Player.h  Textures.h
headers/other/: settings.h
source/: SpaceDOS.cpp  game.cpp  main.cpp
source/other/: settings.cpp
